Fix grid layout + style scrollbars for desktops

--- a/v2-app/src/App.css
+++ b/v2-app/src/App.css
@@ -177,6 +177,27 @@ html {
   -webkit-tap-highlight-color: var(--clr-hover); 
 }
 
+
+@media (hover: hover) and (pointer: fine) {
+  * {
+    scrollbar-width: thin;
+    scrollbar-color: var(--clr-primary) transparent;
+  }
+
+  ::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: var(--clr-primary);
+    border-radius: var(--radius-max);
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: var(--clr-secondary);
+  }
+}
+
 body {
   background: var(--clr-bg);
   color: var(--clr-text);
