--- a/v2-app/src/components/movie/MovieCard/MovieCard.module.css
+++ b/v2-app/src/components/movie/MovieCard/MovieCard.module.css
@@ -102,6 +102,7 @@
   width: clamp(35%, 40%, 45%);
   justify-content: space-evenly;
   align-items: center;
+  pointer-events: none;
 }
 
 
